tests/types/errors/assign_str_to_i32.mog
var age i32 = "hello"
